Mise en place de toutes les améliorations

--- a/github_repo/Projet4__ChercheStage/accueil_etu.html
+++ b/github_repo/Projet4__ChercheStage/accueil_etu.html
@@ -38,6 +38,10 @@
         <br>
      </header>
      <main>
+      <!-- Pop-up -->
+    <div id="popup" class="popup">
+      <p>Déconnecté</p>
+  </div>
         <!-- Job Listings Section -->
         <section class="job-listings">
           <h2>Offres récentes</h2>
