--- a/github_repo/Projet4__ChercheStage/entreprise.html
+++ b/github_repo/Projet4__ChercheStage/entreprise.html
@@ -43,32 +43,29 @@
 
     <!-- Contenu principal -->
     <main class="content">
-        <section class="company">
-            <img src="C:\Users\coren\Downloads\téléchargement.png" alt="McDonald's logo" class="company-logo">
-            <div class="company-info">
-                <h2>McDo France</h2>
-                <p>12 offres actives</p>
-                <p>
-                    Rejoignez l’équipe McDonald’s et découvrez les opportunités de carrière
-                    pour tous, dans un environnement convivial et dynamique.
-                </p>
-                <button class="offer"><a href="file:./creer_offre.html">+ Créer une offre</a></button>
-                <button class="profile"><a href="file:./modifierprofil_ent.html">Modifier mon profil</a></button>
-            </div>
-        </section>
+      <section class="company">
+          <img src="cesi.png" alt="CESI logo" class="company-logo">
+          <div class="company-info">
+              <h2>CESI Informatique</h2>
+              <p>12 offres actives</p>
+              <p>
+                  Rejoignez l’équipe CESI et découvrez les opportunités de carrière
+                  pour tous, dans un environnement convivial et dynamique.
+              </p>
+              <button class="offer"><a href="file:./creer_offre.html" style="color:#ffffff">+ Créer une offre</a></button>
+              <button class="profile"><a href="file:./modifierprofil_ent.html" style="color:#ffffff">Modifier mon profil</a></button>
+          </div>
+      </section>
 
-        <section class="job-offer">
-            <img src="C:\Users\coren\Downloads\téléchargement (1).png" alt="Nous recrutons" class="hiring-img">
-            <div class="job-info">
-                <h3>DEVENIR MEMBRE DE L'ÉQUIPE SERVICE DE MCDONALD'S !</h3>
-                <p>NOUS RECRUTONS !</p>
-                <p>
-                    Participez à l’avenir de l’équipe grâce à des offres de stage ou
-                    des postes en CDI/CDD dans la restauration rapide.
-                </p>
-            </div>
-        </section>
-    </main>
+      <section class="job-offer">
+          <div class="job-info">
+              <p><strong>Adresse:</strong> Immeuble Le Quatrième Zone Aéroportuaire de Montpellier Méditerranée, 34130 Mauguio</p>
+              <p><strong>Domaine d'activité:</strong> Développement de logiciels</p>
+
+              
+          </div>
+      </section>
+  </main>
 
      
 </body> 
