--- a/github_repo/Projet4__ChercheStage/mdp_ent.html
+++ b/github_repo/Projet4__ChercheStage/mdp_ent.html
@@ -18,23 +18,23 @@
 
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry ">Accueil</a></li>
-                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
-                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry active">Entreprise</a></li>
-                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Offre</a></li>
+                    <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry ">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./contact_ent.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./entreprise.HTML" class="top-level-entry active">Entreprise</a></li>
+                    <li class="menu-item"><a href="file:./offre_ent.HTML" class="top-level-entry">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="file:./choix_compte_insc.html" class="button">Déconnexion</a>
+                    <a href="file:./accueil.html" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Entreprise</a></li>
-                <li class="breadcrumb-item"><a href="#">modifier_mon_profil</a></li>
-                <li class="breadcrumb-item"><a href="#">mot_de_passe</a></li>
+                <li class="breadcrumb-item"><a href="#">Entreprise </a></li>
+                <li class="breadcrumb-item"><a href="#">modifier_mon_profil </a></li>
+                <li class="breadcrumb-item"><a href="#">mot_de_passe </a></li>
             </ol>
         </nav>
      </header>
