--- a/github_repo/Projet4__ChercheStage/profil.html
+++ b/github_repo/Projet4__ChercheStage/profil.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html> 
 <html lang="fr"> 
    <head> 
@@ -20,23 +18,23 @@
 
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry ">Accueil</a></li>
-                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry ">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./contact_etu.HTML" class="top-level-entry">Contact</a></li>
                     <li class="menu-item"><a href="file:./profil.HTML" class="top-level-entry active">Profil</a></li>
-                    <li class="menu-item"><a href="file:./offre.html" class="top-level-entry">Offre</a></li>
+                    <li class="menu-item"><a href="file:./recherche_etu.HTML" class="top-level-entry">Offre</a></li>
 
 
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="file:./choix_compte_insc.html" class="button">Déconnexion</a>
+                    <a href="file:./accueil.html" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Profil</a></li>
+                <li class="breadcrumb-item"><a href="file:./profil.HTML">Profil</a></li>
 
             </ol>
         </nav>
@@ -46,12 +44,12 @@
     <!-- Contenu principal -->
     <main class="content">
         <section class="company">
-            <img src="C:\Users\coren\Downloads\téléchargement.png"  class="company-logo">
+            <img src="anakin.png"  class="company-logo">
             <div class="company-info">
-                <h2>Nom Prenom</h2>
-                <p>Niveau d'etude</p>
+                <h2>Anakin Skywalker</h2>
+                <p>2eme année d'ingénieurie</p>
                 <p>
-                    Description de l'etudiant
+                    Etudie l'informatique en école d'ingénieur. Etidiant motivé et dynamique
                 </p>
 
 
@@ -63,13 +61,11 @@
         </section>
 
         <section class="job-offer">
-            <img src="C:\Users\coren\Downloads\téléchargement (1).png"  class="hiring-img">
+            <img src="cesi.png"  class="hiring-img">
             <div class="job-info">
-                <h3>FORMATION [Nom de l'ecole| Université]</h3>
-                <p>Logo de l'ecole</p>
-                <p>
-                    Description de l'ecole
-                </p>
+                <h3>CESI</h3>
+                <p>Capus de Montpellier</p>
+                <p>Réseau de campus d’enseignement supérieur et de formation professionnelle, CESI permet à des étudiants, alternants et salariés de devenir acteurs des transformations des entreprises et de la société.</p>
             </div>
         </section>
     </main>
