--- a/github_repo/Projet4__ChercheStage/stat_ent.html
+++ b/github_repo/Projet4__ChercheStage/stat_ent.html
@@ -18,10 +18,10 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry ">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact_ent.HTML" class="top-level-entry">Contact</a></li>
                     <li class="menu-item"><a href="file:./entreprise.html" class="top-level-entry">Entreprise</a></li>
-                    <li class="menu-item"><a href="file:./offre_ent.html" class="top-level-entry">Offre</a></li>
+                    <li class="menu-item"><a href="file:./offre_ent.html" class="top-level-entry active">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
@@ -32,8 +32,8 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="file:./accueil_ent.HTML">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="file:./protction_ent.html">Protection des données</a></li>
+                <li class="breadcrumb-item"><a href="file:./offre_ent.html">Offre </a></li>
+                <li class="breadcrumb-item"><a href="file:./stat_ent.html">Statistiques</a></li>
             </ol>
         </nav>
         <br>
@@ -44,43 +44,57 @@
         <div class="stats">
             <div>
                 <h2>Nombre de vues de l'annonce</h2>
-                <p>540</p>
+                <p>4</p>
                 <h2>Nombre de postulants</h2>
-                <p>60</p>
+                <p>2</p>
             </div>
             <div>
                 <h2>Personnes ayant vu l'annonce</h2>
                 <div class="person">
-                    <img src="user1.png" alt="User Image">
+                    <img src="anakin.png" alt="User Image">
                     <div class="details">
-                        <p>Nom Prenom</p>
-                        <p>Niveau d'étude</p>
+                        <p>Anakin Skywalker</p>
+                        <p>2eme année d'ingénieurie</p>
                     </div>
                 </div>
                 <div class="person">
-                    <img src="user2.png" alt="User Image">
+                    <img src="leia.png" alt="User Image">
                     <div class="details">
-                        <p>Nom Prenom</p>
-                        <p>Niveau d'étude</p>
+                        <p>Leia Organa</p>
+                        <p>BTS de dévelopement informatique</p>
                     </div>
                 </div>
+                <div class="person">
+                  <img src="kylo.png" alt="User Image">
+                  <div class="details">
+                      <p>Kylo Ren</p>
+                      <p>3eme année d'ingénieurie</p>
+                  </div>
+              </div>
+              <div class="person">
+                <img src="rey.png" alt="User Image">
+                <div class="details">
+                    <p>Rey Palpatine</p>
+                    <p>Alternante en infrastructure réseau</p>
+                </div>
+            </div>
             </div>
             <div>
                 <h2>Personnes ayant postulé</h2>
                 <div class="person">
-                    <img src="user3.png" alt="User Image">
-                    <div class="details">
-                        <p>Nom Prenom</p>
-                        <p>Niveau d'étude</p>
-                    </div>
+                  <img src="anakin.png" alt="User Image">
+                  <div class="details">
+                      <p>Anakin Skywalker</p>
+                      <p>2eme année d'ingénieurie</p>
+                  </div>
+              </div>
+              <div class="person">
+                <img src="rey.png" alt="User Image">
+                <div class="details">
+                    <p>Rey Palpatine</p>
+                    <p>Alternante en infrastructure réseau</p>
                 </div>
-                <div class="person">
-                    <img src="user4.png" alt="User Image">
-                    <div class="details">
-                        <p>Nom Prenom</p>
-                        <p>Niveau d'étude</p>
-                    </div>
-                </div>
+            </div>
             </div>
         </div>
     </div>
