--- a/github_repo/Projet4__ChercheStage/recherche_etu.html
+++ b/github_repo/Projet4__ChercheStage/recherche_etu.html
@@ -18,10 +18,10 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry ">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact_etu.HTML" class="top-level-entry">Contact</a></li>
                     <li class="menu-item"><a href="file:./profil.HTML" class="top-level-entry">Profil</a></li>
-                    <li class="menu-item"><a href="file:./recherche_etu.HTML" class="top-level-entry">Offre</a></li>
+                    <li class="menu-item"><a href="file:./recherche_etu.HTML" class="top-level-entry active">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
@@ -38,14 +38,14 @@
         <br>
      </header>
    <body>
+  
    
     <div class="search-container">
-        <form action="#" method="GET">
-            <input type="text" class="search-input" placeholder="Rechercher un stage dès maintenant !">
-            <button type="submit" class="search-button"><a href="offre_etu.html">Rechercher</button>
-        </form>
-    </div>
-   
+      <form action="#" method="GET">
+          <input type="text" class="search-input" placeholder="Rechercher un stage dès maintenant !">
+          <button type="submit" class="search-button"><a style='color:#ffffff' href="offre_etu.html">Rechercher</button>
+      </form>
+  </div>
 </body> 
 <footer class="footer">
   <div class="footer-container">
