--- a/total/cgu.html
+++ b/total/cgu.html
@@ -5,11 +5,11 @@
       <meta name="description" content="Postuler à une offre de stage">
       <title>Lebonplan</title>
       <link rel="stylesheet" href="cookies.css">
-      <link rel="icon" href="./images/logo_chap.png">
+      <link rel="icon" href="logo_chap.png">
     </head> 
     <body>
     <header style="text-align: center; padding: 20px;">
-        <img src="./images/logo.png" alt="Logo" style="width: 500px;"> 
+        <img src="logo.png" alt="Logo" style="width: 500px;"> 
     </header>
     <header>
         <div class="navbar">
@@ -18,21 +18,21 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="./accueil.HTML" class="top-level-entry active">Accueil</a></li>
-                    <li class="menu-item"><a href="./contact.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="index.htmlL" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="contact.html" class="top-level-entry">Contact</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="./choix_compte_conn.html" class="navitem">Connexion</a>
-                    <a href="./choix_compte_insc.html" class="button">S'inscrire</a>
+                    <a href="choix_compte_conn.html" class="navitem">Connexion</a>
+                    <a href="choix_compte_insc.html" class="button">S'inscrire</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./accueil.HTML">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="./cgu.html">C.G.</a></li>
+                <li class="breadcrumb-item"><a href="accueil.html">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="cgu.html">C.G.</a></li>
             </ol>
         </nav>
         <br>
