--- a/total/inscription_etu.html
+++ b/total/inscription_etu.html
@@ -5,13 +5,13 @@
       <meta name="description" content="Postuler à une offre de stage">
       <title>Lebonplan</title>
       <link rel="stylesheet" href="inscription_etu.css">
-      <link rel="verif" href="../Controler/inscription_etu.js">
+      <link rel="verif" href="inscription_etu.js">
 
-      <link rel="icon" href="./images/logo_chap.png">
+      <link rel="icon" href="logo_chap.png">
     </head> 
     <body>
     <header style="text-align: center; padding: 20px;">
-        <img src="./images/logo.png" alt="Logo" style="width: 500px;"> 
+        <img src="logo.png" alt="Logo" style="width: 500px;"> 
     </header>
     <header>
         <div class="navbar">
@@ -20,7 +20,7 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="./accueil.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="index.html" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="./contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
