modification des noms des fichiers

--- a/total/candidature_ent.html
+++ b/total/candidature_ent.html
@@ -5,7 +5,7 @@
       <meta name="description" content="Postuler à une offre de stage">
       <title>Lebonplan</title>
       <link rel="stylesheet" href="candidature_ent.css">
-      <link rel="icon" href=".logo_chap.png">
+      <link rel="icon" href="logo_chap.png">
     </head> 
     <body>
     <header style="text-align: center; padding: 20px;">
@@ -19,7 +19,7 @@
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
                     <li class="menu-item"><a href="accueil_ent.php" class="top-level-entry">Accueil</a></li>
-                    <li class="menu-item"><a href="contact_ent.html" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="contact_ent.HTML" class="top-level-entry">Contact</a></li>
                     <li class="menu-item"><a href="entreprise.html" class="top-level-entry">Entreprise</a></li>
                     <li class="menu-item"><a href="offre_ent.html" class="top-level-entry active">Offre</a></li>
                 </ul>
@@ -32,8 +32,8 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="offre_ent.html">Offre </a></li>
-                <li class="breadcrumb-item"><a href="candidature_ent.html">Voir candidature </a></li>
+                <li class="breadcrumb-item"><a href="offre_ent.HTML">Offre </a></li>
+                <li class="breadcrumb-item"><a href="candidature_ent.HTML">Voir candidature </a></li>
             </ol>
         </nav>
         <br>
@@ -78,7 +78,7 @@
   <div class="footer-container">
     <!-- Colonne 1 : Logos -->
     <div class="footer-column">
-      <img src="images/logo_chap.png" alt="Logo principal" class="footer-logo">
+      <img src="logo_chap.png" alt="Logo principal" class="footer-logo">
     </div>
 
     <!-- Colonne 2 : Coordonnées -->
@@ -120,7 +120,7 @@
 
   <!-- Bas de page -->
   <div class="footer-bottom">
-    <p>Copyright © 2025 - Tous droits réservés. <a href="./mentions_legales.html">Mentions légales</a></p>
+    <p>Copyright © 2025 - Tous droits réservés. <a href="mentions_legales.html">Mentions légales</a></p>
   </div>
 </footer>
 <script src="menu.js"></script> 
