--- a/total/protection.html
+++ b/total/protection.html
@@ -18,21 +18,21 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="index.html" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="index.php" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="choix_compte_conn.html" class="navitem">Connexion</a>
+                    <a href="connexion.html" class="navitem">Connexion</a>
                     <a href="choix_compte_insc.html" class="button">S'inscrire</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="#">Protection des données</a></li>
+                <li class="breadcrumb-item"><a href="index.php">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="protection.html">Protection des données</a></li>
             </ol>
         </nav>
         <br>
