--- a/total/cgu.html
+++ b/total/cgu.html
@@ -18,20 +18,20 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="index.htmlL" class="top-level-entry active">Accueil</a></li>
-                    <li class="menu-item"><a href="contact.html" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="index.php" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="choix_compte_conn.html" class="navitem">Connexion</a>
+                    <a href="connexion.html" class="navitem">Connexion</a>
                     <a href="choix_compte_insc.html" class="button">S'inscrire</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="accueil.html">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="index.php">Accueil</a></li>
                 <li class="breadcrumb-item"><a href="cgu.html">C.G.</a></li>
             </ol>
         </nav>
@@ -61,7 +61,7 @@
     <div class="footer-container">
       <!-- Colonne 1 : Logos -->
       <div class="footer-column">
-        <img src="images/logo_chap.png" alt="Logo principal" class="footer-logo">
+        <img src="logo_chap.png" alt="Logo principal" class="footer-logo">
       </div>
   
       <!-- Colonne 2 : Coordonnées -->
@@ -76,11 +76,11 @@
       <div class="footer-column">
         <h3>Navigation</h3>
         <ul class="footer-links">
-          <li><a href="./coockies.html">Cookies</a></li>
-          <li><a href="./faq.html">F.A.Q</a></li>
-          <li><a href="./cgu.html">Conditions générales</a></li>
-          <li><a href="./protection.html">Politique de protection des données</a></li>
-          <li><a href="./mentions_legales.html">Mentions légales</a></li>
+          <li><a href="coockies.html">Cookies</a></li>
+          <li><a href="faq.html">F.A.Q</a></li>
+          <li><a href="cgu.html">Conditions générales</a></li>
+          <li><a href="protection.html">Politique de protection des données</a></li>
+          <li><a href="mentions_legales.html">Mentions légales</a></li>
         </ul>
       </div>
   
@@ -90,21 +90,21 @@
         <div class="social-buttons">
           <a class="social-button twitter" href="https://x.com/cesi_officiel?s=21" target="_blank"><i class="fa-brands fa-twitter">
             <img class="twitter" 
-                        src="./images/Twitter.png"></i></a>
+                        src="Twitter.png"></i></a>
             <a class="social-button tiktok" href=" https://www.tiktok.com/@bde_cesi_mtp?_t=ZN-8tezCXXQ3tO&_r=1" target="_blank"><i class="fa-brands fa-tiktok">
                     <img class="TikTok" 
-                        src="./images/tiktok.png"></i></a>
+                        src="tiktok.png"></i></a>
             <a class="social-button instagram" href=" https://www.instagram.com/bde.cesi.montpellier?igsh=MWVhaWFvNGNvcDZuNw==" target="_blank"><i class="fa-brands fa-instagram">
             <img class="instagram" 
-                        src="./images/instagram.png"></i></a>
+                        src="instagram.png"></i></a>
         </div>
       </div>
     </div>
   
     <!-- Bas de page -->
     <div class="footer-bottom">
-      <p>Copyright © 2025 - Tous droits réservés. <a href="./mentions_legales.html">Mentions légales</a></p>
+      <p>Copyright © 2025 - Tous droits réservés. <a href="mentions_legales.html">Mentions légales</a></p>
     </div>
   </footer>
-  <script src="../Controler/menu.js"></script> 
+  <script src="menu.js"></script> 
 </html>
