--- a/total/contact_ent.html
+++ b/total/contact_ent.html
@@ -5,11 +5,11 @@
       <meta name="description" content="Postuler à une offre de stage">
       <title>Lebonplan</title>
       <link rel="stylesheet" href="cookies.css">
-      <link rel="icon" href="./images/logo_chap.png">
+      <link rel="icon" href="logo_chap.png">
     </head> 
     <body>
     <header style="text-align: center; padding: 20px;">
-        <img src="./images/logo.png" alt="Logo" style="width: 500px;"> 
+        <img src="logo.png" alt="Logo" style="width: 500px;"> 
     </header>
     <header>
         <div class="navbar">
@@ -18,21 +18,21 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="./accueil_ent.HTML" class="top-level-entry ">Accueil</a></li>
-                    <li class="menu-item"><a href="./contact_ent.HTML" class="top-level-entry active">Contact</a></li>
-                    <li class="menu-item"><a href="./entreprise.html" class="top-level-entry">Entreprise</a></li>
-                    <li class="menu-item"><a href="./offre_ent.html" class="top-level-entry">Offre</a></li>
+                    <li class="menu-item"><a href="accueil_ent.php" class="top-level-entry ">Accueil</a></li>
+                    <li class="menu-item"><a href="contact_ent.HTML" class="top-level-entry active">Contact</a></li>
+                    <li class="menu-item"><a href="entreprise.html" class="top-level-entry">Entreprise</a></li>
+                    <li class="menu-item"><a href="offre_ent.html" class="top-level-entry">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="./accueil.HTML" class="button">Déconnexion</a>
+                    <a href="index.php" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./contact_ent.HTML">Contact</a></li>
+                <li class="breadcrumb-item"><a href="contact_ent.HTML">Contact</a></li>
             </ol>
         </nav>
         <br>
@@ -81,7 +81,7 @@
   <div class="footer-container">
     <!-- Colonne 1 : Logos -->
     <div class="footer-column">
-      <img src="images/logo_chap.png" alt="Logo principal" class="footer-logo">
+      <img src="logo_chap.png" alt="Logo principal" class="footer-logo">
     </div>
 
     <!-- Colonne 2 : Coordonnées -->
@@ -96,11 +96,11 @@
     <div class="footer-column">
       <h3>Navigation</h3>
       <ul class="footer-links">
-        <li><a href="./coockies_ent.html">Cookies</a></li>
-        <li><a href="./faq_ent.html">F.A.Q</a></li>
-        <li><a href="./cgu_ent.html">Conditions générales</a></li>
-        <li><a href="./protection_ent.html">Politique de protection des données</a></li>
-        <li><a href="./mentions_legales_ent.html">Mentions légales</a></li>
+        <li><a href="coockies_ent.html">Cookies</a></li>
+        <li><a href="faq_ent.html">F.A.Q</a></li>
+        <li><a href="cgu_ent.html">Conditions générales</a></li>
+        <li><a href="protection_ent.html">Politique de protection des données</a></li>
+        <li><a href="mentions_legales_ent.html">Mentions légales</a></li>
       </ul>
     </div>
 
@@ -110,21 +110,21 @@
       <div class="social-buttons">
         <a class="social-button twitter" href="https://x.com/cesi_officiel?s=21" target="_blank"><i class="fa-brands fa-twitter">
           <img class="twitter" 
-                      src="./images/Twitter.png"></i></a>
+                      src="Twitter.png"></i></a>
           <a class="social-button tiktok" href=" https://www.tiktok.com/@bde_cesi_mtp?_t=ZN-8tezCXXQ3tO&_r=1" target="_blank"><i class="fa-brands fa-tiktok">
                   <img class="TikTok" 
-                      src="./images/tiktok.png"></i></a>
+                      src="tiktok.png"></i></a>
           <a class="social-button instagram" href=" https://www.instagram.com/bde.cesi.montpellier?igsh=MWVhaWFvNGNvcDZuNw==" target="_blank"><i class="fa-brands fa-instagram">
           <img class="instagram" 
-                      src="./images/instagram.png"></i></a>
+                      src="instagram.png"></i></a>
       </div>
     </div>
   </div>
 
   <!-- Bas de page -->
   <div class="footer-bottom">
-    <p>Copyright © 2025 - Tous droits réservés. <a href="./mentions_legales.html">Mentions légales</a></p>
+    <p>Copyright © 2025 - Tous droits réservés. <a href="mentions_legales.html">Mentions légales</a></p>
   </div>
 </footer>
-<script src="../Controler/menu.js"></script> 
+<script src="menu.js"></script> 
 </html>
