--- a/total/mentions_legales.html
+++ b/total/mentions_legales.html
@@ -18,7 +18,7 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="index.html" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="index.php" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
@@ -31,7 +31,7 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="index.php">Accueil</a></li>
                 <li class="breadcrumb-item"><a href="coockies.HTML">Mentions légales</a></li>
             </ol>
         </nav>
