--- a/total/offre_etu.html
+++ b/total/offre_etu.html
@@ -7,11 +7,11 @@
       <meta name="description" content="Postuler à une offre de stage">
       <title>Lebonplan</title>
       <link rel="stylesheet" href="offre_etu.css">
-      <link rel="icon" href="./images/logo_chap.png">
+      <link rel="icon" href="logo_chap.png">
     </head> 
     <body>
     <header style="text-align: center; padding: 20px;">
-        <img src="./images/logo.png" alt="Logo" style="width: 500px;"> 
+        <img src="logo.png" alt="Logo" style="width: 500px;"> 
     </header>
     <header>
         <div class="navbar">
@@ -20,21 +20,21 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="./accueil_etu.HTML" class="top-level-entry ">Accueil</a></li>
-                    <li class="menu-item"><a href="./contact_etu.HTML" class="top-level-entry">Contact</a></li>
-                    <li class="menu-item"><a href="./profil.HTML" class="top-level-entry">Profil</a></li>
-                    <li class="menu-item"><a href="./recherche_etu.HTML" class="top-level-entry active">Offre</a></li>
+                    <li class="menu-item"><a href="accueil_etu.php" class="top-level-entry ">Accueil</a></li>
+                    <li class="menu-item"><a href="contact_etu.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="profil.HTML" class="top-level-entry">Profil</a></li>
+                    <li class="menu-item"><a href="recherche_etu.php" class="top-level-entry active">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="./accueil.html" class="button">Déconnexion</a>
+                    <a href="index.php" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./recherche_etu.HTML">Offre</a></li>
+                <li class="breadcrumb-item"><a href="recherche_etu.php">Offre</a></li>
             </ol>
         </nav>
         <br>
