--- a/total/protection_etu.html
+++ b/total/protection_etu.html
@@ -26,7 +26,7 @@
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href=" index.html" class="button">Déconnexion</a>
+                    <a href=" index.php" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
