accueils et rechercher plus profils et wishlist
les accueils sont finis et rechercher des annonces pour els étudiants aussi, le profil est également relié a session et la wishlist est consultable pour ce même étudiant

--- a/total/inscription_etu.html
+++ b/total/inscription_etu.html
@@ -72,7 +72,7 @@
                         <br><br>
                         <br><br>
                         <input type="file" name="file" id="file" accept=".pdf">
-                        <button id="upload-btn" type="button" >Téléverser</button>
+                        <button type="button" id="upload-btn">Téléverser</button>
                         <div id="upload-message"></div>
                         <br><br>
                         <div class="small">Poids max. 2Mo</div>
