--- a/total/connexion.html
+++ b/total/connexion.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Postuler à une offre de stage">
     <title>Lebonplan</title>
-    <link rel="stylesheet" href="connexion.css">
+    <link rel="stylesheet" href="connexion_etu.css">
     <link rel="icon" href="logo_chap.png">
 </head>
 <body>
