Encore plein de modifs de ouf

--- a/total/inscription_etu.html
+++ b/total/inscription_etu.html
@@ -48,7 +48,7 @@
                 <article>
                     <form>
                         <label>Civilité<br>
-                            <select name="title" style="width: 100%">
+                            <select name="civilite" style="width: 100%">
                                 <option value="ms">Madame</option>
                                 <option value="mr">Monsieur</option>   
                             </select>
