nouvelle bdd avec ajustelent
etudiant ok -> manque modifier profil et mdp
entreprise -> manque ajouter supprimer offre, connexion et modifier profils

--- a/total/inscription_ent.html
+++ b/total/inscription_ent.html
@@ -48,9 +48,9 @@
             <form>
               <label>Nom de l'entreprise*<br><input style="width: 99%" name="entreprise" type="text" size="50" value="" required ></label>
               <br><br>
-              <label>Nom*<br><input style="width: 99%" name="lastname" type="text" size="50" value="" required ></label>
+              <label>Nom*<br><input style="width: 99%" name="nom" type="text" size="50" value="" required ></label>
               <br><br>
-              <label>Prénom*<br><input style="width: 99%" name="surname" type="text" size="50" value="" required ></label>
+              <label>Prénom*<br><input style="width: 99%" name="prenom" type="text" size="50" value="" required ></label>
               <br><br>
               <label>Adresse mail*<br><input style="width: 99%" name="email" type="email" size="50" value="" required ></label>
               <br><br>
